crates/moor-review-core/tests/snapshots/render__reindented_block_plus_real_change__ignore_ws.snap
---
source: crates/moor-review-core/tests/render.rs
expression: r
---
{
  "content": {
    "type": "Text",
    "total_rows": 6,
    "chunk_rows": 500,
    "chunk_count": 1,
    "highlighted": false,
    "additions": 1,
    "deletions": 1
  },
  "rows": [
    {
      "type": "Expander",
      "hidden": 2,
      "dir": "Up"
    },
    {
      "type": "HunkHeader",
      "text": "@@ -3,4 +3,4 @@"
    },
    {
      "type": "Context",
      "left": {
        "line_no": 3,
        "text": "  c",
        "spans": [],
        "changed": []
      },
      "right": {
        "line_no": 3,
        "text": "    c",
        "spans": [],
        "changed": []
      }
    },
    {
      "type": "Context",
      "left": {
        "line_no": 4,
        "text": "  d",
        "spans": [],
        "changed": []
      },
      "right": {
        "line_no": 4,
        "text": "    d",
        "spans": [],
        "changed": []
      }
    },
    {
      "type": "Context",
      "left": {
        "line_no": 5,
        "text": "e",
        "spans": [],
        "changed": []
      },
      "right": {
        "line_no": 5,
        "text": "e",
        "spans": [],
        "changed": []
      }
    },
    {
      "type": "Modified",
      "left": {
        "line_no": 6,
        "text": "f",
        "spans": [],
        "changed": [
          {
            "start": 0,
            "end": 1
          }
        ]
      },
      "right": {
        "line_no": 6,
        "text": "F",
        "spans": [],
        "changed": [
          {
            "start": 0,
            "end": 1
          }
        ]
      }
    }
  ]
}
